# random_variant

./: Cargo.toml  README.md
random_variant_macro/: Cargo.toml
random_variant_macro/src/: lib.rs
src/: heapless_impl.rs  lib.rs  std_impls.rs  test.rs  uuid.rs
