[package]
name = "random_variant"
version = "0.1.1"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"

description = "To be used with all variant, contains the derive macro"
license = "MIT"
repository = "https://github.com/TotalKrill/every_variant"

readme = "./README.md"

[dependencies]
rand = "0.8.5"
random_variant_macro = {version ="0.1", path ="./random_variant_macro"}

[dev-dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
